// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editor.packShapes > packs rotated shapes > packed shapes 1`] = `
[
  {
    "id": "shape:boxA",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 3.141592653589793,
    "tlmeta": {
      "createdAt": 1772541435679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541435679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 192,
    "y": 308,
  },
  {
    "id": "shape:boxB",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541435679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541435679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 92,
    "y": 92,
  },
  {
    "id": "shape:boxC",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541435679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541435679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 208,
    "y": 92,
  },
]
`;

exports[`editor.packShapes > packs shapes > packed shapes 1`] = `
[
  {
    "id": "shape:boxA",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541434679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541434679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 84,
    "y": 200,
  },
  {
    "id": "shape:boxB",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541434679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541434679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 200,
    "y": 200,
  },
  {
    "id": "shape:boxC",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541434679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541434679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 316,
    "y": 200,
  },
]
`;

exports[`editor.packShapes > packs shapes using the adjacent shape margin option > packed shapes 1`] = `
[
  {
    "id": "shape:boxA",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541433679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541433679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 99,
    "y": 200,
  },
  {
    "id": "shape:boxB",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541433679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541433679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 200,
    "y": 200,
  },
  {
    "id": "shape:boxC",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "tlmeta": {
      "createdAt": 1772541433679,
      "createdBy": "nW6tSwaTYuTV05D-45Ewv",
      "updatedAt": 1772541433679,
      "updatedBy": "nW6tSwaTYuTV05D-45Ewv",
    },
    "type": "geo",
    "typeName": "shape",
    "x": 301,
    "y": 200,
  },
]
`;
